data/derived/comb/progs/unify/prog2523.ml.out
Characters 12-13:
  fixpoint (g,0);;
              ^
Error: This expression has type int but an expression was expected of type
         int -> int
